# rikai-os

./: .dockerignore  .gitignore  .gitmodules  AUDIT.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  PLAN.md  README.md  pyproject.toml
.claude/: ralph-loop.local.md  settings.json
.claude/commands/: no-cap.md  remind.md
.claude/hooks/: check-plan-reminder.sh  pre-commit.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-python.yml  ci-rust.yml  ci-typescript.yml  ci.yml  codeql.yml  deploy.yml  review.yml
.planning/: AWS_DEPLOYMENT.md
.progress/: 001_20260110_160523_remove-qdrant-voyage.md  001_20260129_propose_improvement_tool.md  002_20260110_173000_supermemory-mem0-research.md  002_20260110_180000_web-ui-implementation.md  003_20260110_190000_memu-inspired-memory-plan.md  004_20260110_210000_tigerstyle-umi-standalone.md  005_20260110_214500_kelpie-dst-memory-analysis.md  006_20260110_220000_unified-memory-architecture.md  007_20260110_223000_umi-simulation-first.md  008_20260110_230000_rust-umi-library.md  009_20260111_000000_umi-vs-memory-systems-analysis.md  010_20260111_010000_umi-hybrid-architecture-plan.md  011_20260128_163000_tama-mvp-implementation.md  012_20260129_remove_hashmaps_single_source.md  058_REVIEW_PROMPT.md
.progress/templates/: plan.md
.vision/: ARCHITECTURE.md  CONSTRAINTS.md  NORTHSTAR.md  PHILOSOPHY.md  STYLING.md  UX.md  summary.md  technical-directions.md  technical-landscape.md
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
dashboard/src/components/: BottomNav.module.css  BottomNav.tsx  Button.module.css  Button.tsx  Card.module.css  Card.tsx  IconButton.module.css  IconButton.tsx  ListItem.module.css  ListItem.tsx  Logo.module.css  Logo.tsx  Search.module.css  Search.tsx  ThemeToggle.module.css  ThemeToggle.tsx
dashboard/src/components/brand/: Logo.tsx
dashboard/src/components/entities/: EntityBadge.tsx  EntityCard.tsx  EntityIcon.tsx  index.ts
dashboard/src/components/layout/: AppShell.tsx  BottomNav.tsx  Header.tsx  Sidebar.tsx  index.ts
dashboard/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  index.ts  input.tsx  scroll-area.tsx  switch.tsx  tooltip.tsx
dashboard/src/types/: index.ts
docker/: docker-compose.yml
docker/init/postgres/: 001_init.sql  01-init.sql
docs/adr/: 000-template.md  001-dst-framework.md  002-three-tier-memory.md  003-tigerstyle-engineering.md  004-rust-umi.md  005-storage-backend-trait.md  006-hybrid-architecture.md  README.md
infrastructure/: README.md
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/terraform/modules/amplify/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/aurora/: main.tf
infrastructure/terraform/modules/ecr/: main.tf
infrastructure/terraform/modules/ecs/: main.tf
infrastructure/terraform/modules/s3/: main.tf
infrastructure/terraform/modules/vpc/: main.tf
rikaios/: __init__.py
rikaios/cli/: main.py
rikaios/connectors/: __init__.py  base.py  chat.py  files.py  git.py  google.py
rikaios/core/: config.py  models.py
rikaios/federation/: __init__.py  agent.py  hiroba.py  permissions.py
rikaios/servers/: __init__.py  api.py  mcp.py
rikaios/tama/: __init__.py  agent.py  memory.py  setup.py
rikaios/umi/: __init__.py  client.py  export.py  sync.py
rikaios/umi/storage/: base.py  objects.py  pgvector.py  postgres.py  vectors.py
src/: main.rs  proposals.rs  telegram.rs  trajectory.rs  user_keys.rs
src/rikai/cli/: main.py
src/rikai/connectors/: __init__.py  base.py  chat.py  files.py  git.py  google.py  messaging.py  slack.py  telegram.py
src/rikai/core/: config.py  models.py
src/rikai/federation/: __init__.py  hiroba.py  permissions.py
src/rikai/servers/: __init__.py  api.py  mcp.py
src/rikai/tama/: __init__.py  agent.py  memory.py  setup.py
src/rikai/tama/tools/: __init__.py
src/rikai/umi/: __init__.py  client.py  constants.py  export.py  sync.py
src/rikai/umi/dst/: __init__.py  clock.py  config.py  fault.py  rng.py  simulation.py  storage.py
src/rikai/umi/storage/: base.py  objects.py  pgvector.py  postgres.py  vectors.py
src/tools/: mod.rs  proposal.rs  trajectory.rs
tests/: conftest.py  service_test.rs  test_cli.py  test_connectors.py  test_core_models.py  test_hiroba.py  test_mcp_server.py  test_messaging.py  test_slack.py  test_tama_agent.py  test_telegram.py  test_umi_client.py  test_umi_storage_objects.py  test_umi_storage_postgres.py  test_umi_storage_vectors.py
tests/dst/: __init__.py  test_dst_framework.py
umi/: Cargo.toml
umi/docs/adr/: 007-sim-llm-provider.md  008-memory-class.md
umi/umi-cli/: Cargo.toml
umi/umi-cli/src/: main.rs
umi/umi-core/: Cargo.toml
umi/umi-core/src/: constants.rs  lib.rs
umi/umi-core/src/dst/: clock.rs  config.rs  fault.rs  mod.rs  network.rs  property.rs  rng.rs  simulation.rs  storage.rs
umi/umi-core/src/memory/: archival.rs  block.rs  core.rs  mod.rs  working.rs
umi/umi-core/src/storage/: entity.rs  error.rs  evolution.rs  mod.rs  postgres.rs  sim.rs  vector.rs
umi/umi-py/: Cargo.toml
umi/umi-py/src/: lib.rs
umi/umi-python/: pyproject.toml
umi/umi-python/umi/: __init__.py  memory.py
umi/umi-python/umi/tests/: test_memory.py
