[package]
name = "rikai"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "Tama MVP - Secure self-improving AI assistant"
authors = ["nerdsane"]

[dependencies]
# Kelpie infrastructure
kelpie-core = { git = "https://github.com/rita-aga/kelpie.git", branch = "master" }
kelpie-server = { git = "https://github.com/rita-aga/kelpie.git", branch = "master" }
kelpie-storage = { git = "https://github.com/rita-aga/kelpie.git", branch = "master" }
kelpie-sandbox = { git = "https://github.com/rita-aga/kelpie.git", branch = "master" }

# Async runtime
tokio = { version = "1.34", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "=0.4.38", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Telegram bot
teloxide = { version = "0.12", features = ["macros"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Encryption for user keys
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"

# Shell path expansion
shellexpand = "3.1"

# Environment loading
dotenvy = "0.15"

# Lazy initialization
once_cell = "1.19"

# HTTP server
axum = "0.7"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"

[[bin]]
name = "rikai"
path = "src/main.rs"
