[project]
name = "rikai"
version = "0.1.0"
description = "RikaiOS (理解OS) - Personal Context Operating System"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Rita Agafonova" }
]
keywords = ["ai", "agent", "memory", "context", "mcp", "personal-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",

    # API
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",

    # MCP
    "mcp>=1.0.0",

    # Agent Runtime
    "letta-client>=0.1.0",
    "anthropic>=0.39.0",

    # Database
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pgvector>=0.3.0",

    # Object Storage
    "boto3>=1.35.0",
    "aioboto3>=13.0.0",

    # Embeddings
    "voyageai>=0.3.0",

    # Utilities
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "watchdog>=5.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
]
# Legacy Qdrant support (use RIKAI_VECTOR_BACKEND=qdrant)
qdrant = [
    "qdrant-client>=1.12.0",
]

[project.scripts]
rikai = "rikai.cli.main:app"
rikai-mcp = "rikai.servers.mcp:main"
rikai-api = "rikai.servers.api:main"

[project.urls]
Homepage = "https://github.com/rita-aga/rikai-os"
Documentation = "https://github.com/rita-aga/rikai-os#readme"
Repository = "https://github.com/rita-aga/rikai-os"
Issues = "https://github.com/rita-aga/rikai-os/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rikai"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/rikai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
