[workspace]
resolver = "2"
members = [
    "umi-core",
    # "umi-py",  # TODO: Enable when PyO3 bindings ready
    # "umi-cli", # TODO: Enable when CLI ready
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/umi"
authors = ["RikaiOS Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Deterministic RNG
rand = "0.8"
rand_chacha = "0.3"

# Error handling
thiserror = "1"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

# CLI (pinned to avoid home 0.5.12 which requires Rust 1.88)
clap = { version = "4.4", features = ["derive"] }
