[package]
name = "umi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Umi memory system"

[[bin]]
name = "umi"
path = "src/main.rs"

[dependencies]
umi-core = { path = "../umi-core", features = ["postgres"] }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
